overflow bug fixed

--- a/src/app/styles/styles.scss
+++ b/src/app/styles/styles.scss
@@ -201,6 +201,7 @@
         flex-wrap: wrap;
         width: 100%;
         padding: 50px;
+        overflow-x: hidden;
 
         &_logo {
             width: 100%;
